FIXED: KMC issues reported by amjad bhai are resolved!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -304,19 +304,23 @@
     <string name="kba05">ڇا هن وقت اوهان حمل سان آهيو؟</string>
     <string name="num">تعداد</string>
     <string name="kba06"> آخري ٻار جي موجوده صورتحال ڇا آهي؟ </string>
+    <string name="kba06c"> ٻئي ٻار جيئرا آهن </string>
+    <string name="kba06d">ٻئي ٻار مري ويا </string>
+    <string name="kba06e">هڪ  ٻار زنده ۽ هڪ ٻار مري ويو </string>
     <string name="kba06a"> جيئرو </string>
     <string name="kba06b"> مري ويو </string>
     <string name="kba07"> ٻار جي عمر وفات وقت ڪيتري هئي؟ </string>
     <string name="kba07m"> عمر مهينن ۾ </string>
     <string name="kba07y"> عمر  ڏينهن  ۾ </string>
-    <string name="kba08">.حمل جو نتيجو</string>
+    <string name="kba08">توهان جي گذريل حمل جو نتيجو ڇا هيو؟ </string>
     <string name="kba09">ويم جي تاريخ</string>
-    <string name="kba08a">ضايع ٿي وڃڻ</string>
-    <string name="kba08b"> مرده ٻار جي پيدائش </string>
-    <string name="kba08c"> زندهه ٻار جي پيدائش</string>
-    <string name="kba08d"> جاڙن ٻارن جي  پيدائش </string>
-    <string name="kba08e"> جڑواں مردہ بچوں کی پیدائش </string>
-    <string name="kba08f"> ایک زندہ ایک مردہ بچوں کی پیدائش </string>
+    <string name="kba08a">حمل جو ضايع ڪرائڻ(28 هفتن ۾)</string>
+    <string name="kba08b">حمل جو ضايع ٿي وڃڻ(14 هفتن ۾)</string>
+    <string name="kba08c"> مئل پيدائش  </string>
+    <string name="kba08d">زنده پيدائش</string>
+    <string name="kba08e"> جاڙا زنده پيدائش </string>
+    <string name="kba08f">جاڙا مئل پيدائش</string>
+    <string name="kba08g"> هڪ مئل پيدائش ۽ هڪ زنده پيدائش  </string>
 
     <string name="kbbheading"> حمل جي دوران طبي معائنو(گذريل حمل) </string>
     <string name="kbb01"> ڇا توهان گذريل حمل دوران طبي معائنو ڪرايو هو؟ </string>
