Modified Skip Pattern and String of question Q9 twin

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -310,6 +310,7 @@
     <string name="kba06a"> جيئرو </string>
     <string name="kba06b"> مري ويو </string>
     <string name="kba07"> ٻار جي عمر وفات وقت ڪيتري هئي؟ </string>
+    <string name="kba07twin">ٻئي  ٻار جي عمر وفات وقت ڪيتري هئي؟ </string>
     <string name="kba07m"> عمر مهينن ۾ </string>
     <string name="kba07y"> عمر  ڏينهن  ۾ </string>
     <string name="kba08">توهان جي گذريل حمل جو نتيجو ڇا هيو؟ </string>
