Modified Forms Table Name and Added Validation For Household Pattern Checking

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name"> Kangroo Mother Care Baseline II - Validation </string>
+    <string name="app_name"> Kangroo Mother Care Validation II </string>
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
@@ -9,8 +9,7 @@
     <string name="error_invalid_password">This password is too short</string>
     <string name="error_incorrect_password">This password is incorrect</string>
     <string name="error_field_required">This field is required</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email
-    completions."
+    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."
   </string>
     <string name="btnSync">Sync</string>
     <string name="btnUpload">Upload</string>
