--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,11 +81,12 @@
     <string name="kaa06">جواب ڏيندڙ جي عمر </string>
     <string name="kaa07">جواب ڏيندڙ جي تعليم </string>
     <string name="kaa08">گھر جي مڪمل ڀاتين جو تعداد</string>
-    <string name="kaa09">Total no. of MWRA in HH</string>
+    <string name="kaa09">توليدي عمر وارين عورتن جي تعداد</string>
     <string name="kaa10"> 5 سالن کان گھٽ عمر وارن ٻارن جو ڪل تعداد </string>
     <string name="kaa10a">0-28 days </string>
     <string name="kaa10b">29 days – 1 Year </string>
     <string name="kaa10c">>1 year – 5 year  </string>
+    <string name="kaa11">  گهر جي سربراهه جو نالو </string>
 
     <!--      CBT Vars       !-->
     <string name="kabheading"> Section: A2 LIVE BIRTHS AND MORTALITY INFORMATION  </string>
