head of household added question as per hassan bhai direction

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,6 +78,7 @@
     <string name="cra05">توليدي عمر واري عورت جو نالو</string>
     <string name="cra06">توليدي عمر واري عورت جي عمر( 15-49 سالن تائين)</string>
     <string name="cra07"> ڇا جواب ڏيندڙ تحقيق ۾ حصو وٺڻ لاءِ تيار آهي </string>
+    <string name="kaa11">گهر جي سربراهه جو نالو  </string>
     <string name="kaa05">جواب ڏيندڙ جو نالو </string>
     <string name="kaa06">جواب ڏيندڙ جي عمر </string>
     <string name="kaa07">جواب ڏيندڙ جي تعليم </string>
