Added Server Side Validation of Household

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="end_interview"> اختتام </string>
     <string name="start_interview"> انٹروہو شروع کریں </string>
     <string name="nextSection"> اڳئين سيڪشن تي وڃو </string>
-    <string name="searchwoman"> Search Woman </string>
+    <string name="searchhh"> Search HH</string>
     <string name="addMember"> افراد کا اندراج </string>
     <string name="istatus">انٹروہو کا نتیجہ</string>
     <string name="istatusa"> مکمل</string>
