--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -896,6 +896,7 @@
     <string name="kapr14"> تاريخ </string>
 
 
+    <string name="kf1a0"> جانچ جي جڳهه </string>
     <string name="kf1a1"> تحقيق ڪندڙ جو نالو ۽ سڃاڻپ </string>
     <string name="kf1a2"> جانچ جو علائقو </string>
     <string name="kf1a3"> ماءُ جو سڃاڻپ نمبر </string>
